@startuml
title Class view — Facilitator community overview

skinparam backgroundColor #FFFDF7
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontColor #18352F
skinparam ArrowColor #2F6F67
skinparam packageBorderColor #477B73
skinparam packageBackgroundColor #EEF6F3
skinparam rectangleBorderColor #477B73
skinparam rectangleBackgroundColor #FFFFFF
skinparam componentBorderColor #8A5A1F
skinparam componentBackgroundColor #FFF6E6
skinparam databaseBorderColor #4E668E
skinparam databaseBackgroundColor #EEF3FB
skinparam actorBorderColor #18352F
skinparam actorBackgroundColor #FFFFFF
skinparam classBorderColor #477B73
skinparam classBackgroundColor #FFFFFF
skinparam sequenceBoxBorderColor #477B73
skinparam sequenceBoxBackgroundColor #F4F8F6
skinparam ParticipantBorderColor #477B73
skinparam ParticipantBackgroundColor #FFFFFF
skinparam BoxPadding 10
hide stereotype

left to right direction
package "Reconciliation Through Relationships application" {
  package "Facilitator community overview structure" {
    class "FacilitatorPage" as type0 {
      +render(): Promise<ReactNode>
    }
    
    class "Stat" as type1 {
      +label
      +value
      +icon
      +href
    }
    
    entity "Profile" as type2 {
      +role
      +learning_completed
    }
    
    entity "Match" as type3 {
      +status
    }
    
    entity "Connection" as type4 {
      +status
    }
    
    entity "Cohort" as type5 {
      +id
    }
  }
}
type0 --> type1 : builds 5
type1 --> type2 : counts
type1 --> type3 : counts
type1 --> type4 : counts
type1 --> type5 : counts
legend bottom
  Class = implementation component or value shape
  Interface = public TypeScript contract
  Entity = persisted or domain data record
endlegend
@enduml
